--- a/src/Baasic.Client/Baasic.Client.csproj
+++ b/src/Baasic.Client/Baasic.Client.csproj
@@ -1,144 +1,33 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{09ECCE82-F0DF-4A27-B323-370071BF1DAD}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Baasic.Client</RootNamespace>
+    <TargetFrameworks>net461;net462;net47;net471;net472;netcoreapp2.0;netcoreapp2.1;netcoreapp2.2</TargetFrameworks>
     <AssemblyName>Baasic.Client</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile111</TargetFrameworkProfile>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
-    <NuGetPackageImportStamp>465e12c9</NuGetPackageImportStamp>
+    <RootNamespace>Baasic.Client</RootNamespace>
+    <Authors>Mono Ltd.</Authors>
+    <Company>Mono Ltd.</Company>
+    <Product>Baasic .NET SDK</Product>
+    <AssemblyVersion>0.8.163</AssemblyVersion>
+    <Description>Baasic .NET SDK Library</Description>
+    <Copyright>Copyright © 2018</Copyright>
+    <FileVersion>0.8.163</FileVersion>
+    <Version>0.8.163</Version>
+    <PackageProjectUrl>http://www.baasic.com</PackageProjectUrl>
+    <PackageIconUrl>http://www.baasic.com/img/baasic-logo.png</PackageIconUrl>
+    <PackageLicenseUrl>https://github.com/Baasic/baasic-sdk-net/blob/master/LICENSE.txt</PackageLicenseUrl>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageTags>Baasic;.NET;Portable;Clients</PackageTags>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>bin\Debug\Baasic.Client.XML</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\portable-net45+win8+wp8+wpa81\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http.Extensions, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Net.Http.2.2.22\lib\portable-net45+win8+wpa81\System.Net.Http.Extensions.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\portable-wp8+netcore45+net45+wp81+wpa81\System.Net.Http.Formatting.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Net.Http.Primitives, Version=4.2.22.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Net.Http.2.2.22\lib\portable-net45+win8+wpa81\System.Net.Http.Primitives.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="..\SharedAssemblyInfo.cs">
-      <Link>Properties\SharedAssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="Clients\Articles\ArticleCommentRepliesClient.cs" />
-    <Compile Include="Clients\Articles\ArticleCommentsClient.cs" />
-    <Compile Include="Clients\Articles\ArticleSettingsClient.cs" />
-    <Compile Include="Clients\Articles\ArticleTagClient.cs" />
-    <Compile Include="Clients\Articles\IArticleCommentRepliesClient.cs" />
-    <Compile Include="Clients\Articles\IArticleCommentsClient.cs" />
-    <Compile Include="Clients\Articles\IArticleSettingsClient.cs" />
-    <Compile Include="Clients\Articles\IArticleTagClient.cs" />
-    <Compile Include="Clients\Dynamic\DynamicResourceClient.cs" />
-    <Compile Include="Clients\Dynamic\IDynamicResourceClient.cs" />
-    <Compile Include="Clients\Membership\IUserPasswordRecoveryClient.cs" />
-    <Compile Include="Clients\Membership\IUserRegistrationClient.cs" />
-    <Compile Include="Clients\Membership\IUserClient.cs" />
-    <Compile Include="Clients\Membership\IRoleClient.cs" />
-    <Compile Include="Clients\Membership\UserRegistrationClient.cs" />
-    <Compile Include="Clients\Membership\UserPasswordRecoveryClient.cs" />
-    <Compile Include="Clients\Membership\UserClient.cs" />
-    <Compile Include="Clients\Membership\RoleClient.cs" />
-    <Compile Include="Clients\Notifications\INotificationClient.cs" />
-    <Compile Include="Clients\Notifications\NotificationClient.cs" />
-    <Compile Include="Clients\Profile\IProfileClient.cs" />
-    <Compile Include="Clients\Profile\ProfileClient.cs" />
-    <Compile Include="Infrastructure\Core\HttpClientFactory.cs" />
-    <Compile Include="Infrastructure\Core\BaasicClientFactory.cs" />
-    <Compile Include="Clients\Articles\IArticleClient.cs" />
-    <Compile Include="Clients\Articles\ArticleClient.cs" />
-    <Compile Include="Infrastructure\DependencyInjection\DefaultDependencyResolver.cs" />
-    <Compile Include="Formatters\IJsonFormatter.cs" />
-    <Compile Include="Formatters\JsonFormatter.cs" />
-    <Compile Include="Infrastructure\Core\IHttpClientFactory.cs" />
-    <Compile Include="Infrastructure\Core\IBaasicClientFactory.cs" />
-    <Compile Include="Infrastructure\Core\IBaasicClient.cs" />
-    <Compile Include="Infrastructure\Core\BaasicClient.cs" />
-    <Compile Include="Infrastructure\Core\ClientBase.cs" />
-    <Compile Include="Configuration\ClientConfiguration.cs" />
-    <Compile Include="Infrastructure\DependencyInjection\DIModule.cs" />
-    <Compile Include="Clients\KeyValue\IKeyValueClient.cs" />
-    <Compile Include="Clients\KeyValue\KeyValueClient.cs" />
-    <Compile Include="Infrastructure\Security\AuthenticatedUser.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Infrastructure\Security\AuthenticationToken.cs" />
-    <Compile Include="Infrastructure\Security\DefaultTokenHandler.cs" />
-    <Compile Include="Clients\Security\ITokenClient.cs" />
-    <Compile Include="Clients\Security\TokenClient.cs" />
-    <Compile Include="Utility\UrlBuilder.cs" />
+    <ProjectReference Include="..\Baasic.Client.Common\Baasic.Client.Common.csproj" />
+    <ProjectReference Include="..\Baasic.Client.Model\Baasic.Client.Model.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Baasic.Client.Common\Baasic.Client.Common.csproj">
-      <Project>{d9a9b364-8f08-4c40-a307-95c0c5d95fb9}</Project>
-      <Name>Baasic.Client.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Baasic.Client.Model\Baasic.Client.Model.csproj">
-      <Project>{94197638-4537-46a5-a641-5e1b9626f2e8}</Project>
-      <Name>Baasic.Client.Model</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="Baasic.Client.nuspec">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
-  <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
-    <Error Condition="!Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=317567." HelpKeyword="BCLBUILD2001" />
-    <Error Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="The build restored NuGet packages. Build the project again to include these packages in the build. For more information, see http://go.microsoft.com/fwlink/?LinkID=317568." HelpKeyword="BCLBUILD2002" />
-  </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
