--- a/src/Baasic.Client.Test/Baasic.Client.Test.csproj
+++ b/src/Baasic.Client.Test/Baasic.Client.Test.csproj
@@ -7,11 +7,11 @@
     <Authors>Mono Ltd.</Authors>
     <Company>Mono Ltd.</Company>
     <Product>Baasic .NET SDK</Product>
-    <AssemblyVersion>0.8.163</AssemblyVersion>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
     <Description>Baasic .NET SDK Library</Description>
     <Copyright>Copyright © 2018</Copyright>
-    <FileVersion>0.8.163</FileVersion>
-    <Version>0.8.163</Version>
+    <FileVersion>1.1.0</FileVersion>
+    <Version>1.1.0-alpha01</Version>
     <PackageProjectUrl>http://www.baasic.com</PackageProjectUrl>
     <PackageIconUrl>http://www.baasic.com/img/baasic-logo.png</PackageIconUrl>
     <PackageLicenseUrl>https://github.com/Baasic/baasic-sdk-net/blob/master/LICENSE.txt</PackageLicenseUrl>
