--- a/src/Baasic.Client/Baasic.Client.csproj
+++ b/src/Baasic.Client/Baasic.Client.csproj
@@ -7,11 +7,11 @@
     <Authors>Mono Ltd.</Authors>
     <Company>Mono Ltd.</Company>
     <Product>Baasic .NET SDK</Product>
-    <AssemblyVersion>1.1.2</AssemblyVersion>
+    <AssemblyVersion>1.1.3</AssemblyVersion>
     <Description>Baasic .NET SDK Library</Description>
     <Copyright>Copyright © 2018</Copyright>
-    <FileVersion>1.1.2</FileVersion>
-    <Version>1.1.2-alpha10</Version>
+    <FileVersion>1.1.3</FileVersion>
+    <Version>1.1.3</Version>
     <PackageProjectUrl>http://www.baasic.com</PackageProjectUrl>
     <PackageIconUrl>http://www.baasic.com/img/baasic-logo.png</PackageIconUrl>
     <PackageLicenseUrl>https://github.com/Baasic/baasic-sdk-net/blob/master/LICENSE.txt</PackageLicenseUrl>
