--- a/src/Baasic.Client.Test/Baasic.Client.Test.csproj
+++ b/src/Baasic.Client.Test/Baasic.Client.Test.csproj
@@ -11,7 +11,7 @@
     <Description>Baasic .NET SDK Library</Description>
     <Copyright>Copyright © 2019</Copyright>
     <FileVersion>1.1.8</FileVersion>
-    <Version>1.1.8-alpha01</Version>
+    <Version>1.1.8</Version>
     <PackageProjectUrl>http://www.baasic.com</PackageProjectUrl>
     <PackageIconUrl>http://www.baasic.com/img/baasic-logo.png</PackageIconUrl>
     <PackageLicenseUrl>https://github.com/Baasic/baasic-sdk-net/blob/master/LICENSE.txt</PackageLicenseUrl>
