--- a/src/Baasic.Client.AutoFac/Baasic.Client.AutoFac.csproj
+++ b/src/Baasic.Client.AutoFac/Baasic.Client.AutoFac.csproj
@@ -11,7 +11,7 @@
     <Description>Baasic .NET SDK AutoFac Library</Description>
     <Copyright>Copyright © 2019</Copyright>
     <FileVersion>1.1.10</FileVersion>
-    <Version>1.1.10-alpha02</Version>
+    <Version>1.1.10</Version>
     <PackageProjectUrl>http://www.baasic.com</PackageProjectUrl>
     <PackageIconUrl>http://www.baasic.com/img/baasic-logo.png</PackageIconUrl>
     <PackageLicenseUrl>https://github.com/Baasic/baasic-sdk-net/blob/master/LICENSE.txt</PackageLicenseUrl>
