--- a/src/Baasic.Client.Common/Baasic.Client.Common.csproj
+++ b/src/Baasic.Client.Common/Baasic.Client.Common.csproj
@@ -7,11 +7,11 @@
     <Authors>Mono Ltd.</Authors>
     <Company>Mono Ltd.</Company>
     <Product>Baasic .NET SDK</Product>
-    <AssemblyVersion>1.1.10</AssemblyVersion>
+    <AssemblyVersion>1.1.11</AssemblyVersion>
     <Description>Baasic .NET SDK Library</Description>
     <Copyright>Copyright © 2019</Copyright>
-    <FileVersion>1.1.10</FileVersion>
-    <Version>1.1.10</Version>
+    <FileVersion>1.1.11</FileVersion>
+    <Version>1.1.11-alpha01</Version>
     <PackageProjectUrl>http://www.baasic.com</PackageProjectUrl>
     <PackageIconUrl>http://www.baasic.com/img/baasic-logo.png</PackageIconUrl>
     <PackageLicenseUrl>https://github.com/Baasic/baasic-sdk-net/blob/master/LICENSE.txt</PackageLicenseUrl>
