--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
   <PropertyGroup>
-    <Version>1.1.15</Version>
-    <FileVersion>1.1.15</FileVersion>
-    <AssemblyVersion>1.1.15</AssemblyVersion>
+    <Version>1.1.16-alpha02</Version>
+    <FileVersion>1.1.16</FileVersion>
+    <AssemblyVersion>1.1.16</AssemblyVersion>
     <Authors>Mono Ltd.</Authors>
     <Company>Mono Ltd.</Company>
     <Description>Baasic .NET SDK Library</Description>
