--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <Version>1.1.16-alpha02</Version>
+    <Version>1.1.16</Version>
     <FileVersion>1.1.16</FileVersion>
     <AssemblyVersion>1.1.16</AssemblyVersion>
     <Authors>Mono Ltd.</Authors>
