--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <Version>1.1.17-alpha01</Version>
+    <Version>1.1.17</Version>
     <FileVersion>1.1.17</FileVersion>
     <AssemblyVersion>1.1.17</AssemblyVersion>
     <Authors>Mono Ltd.</Authors>
