--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <Version>1.1.18-alpha05</Version>
+    <Version>1.1.18</Version>
     <FileVersion>1.1.18</FileVersion>
     <AssemblyVersion>1.1.18</AssemblyVersion>
     <Authors>Mono Ltd.</Authors>
