--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
   <PropertyGroup>
-    <Version>1.1.19-alpha03</Version>
-    <FileVersion>1.1.19</FileVersion>
-    <AssemblyVersion>1.1.19</AssemblyVersion>
+    <Version>1.1.20</Version>
+    <FileVersion>1.1.20</FileVersion>
+    <AssemblyVersion>1.1.20</AssemblyVersion>
     <Authors>Mono Ltd.</Authors>
     <Company>Mono Ltd.</Company>
     <Description>Baasic .NET SDK Library</Description>
